--- a/sportsRec.ipynb
+++ b/sportsRec.ipynb
@@ -1718,7 +1718,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cse158",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1732,7 +1732,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
