Twitch fles updated

--- a/twitchRec.ipynb
+++ b/twitchRec.ipynb
@@ -802,49 +802,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>29300</th>\n",
-       "      <td>991</td>\n",
-       "      <td>33827103344</td>\n",
+       "      <th>2246785</th>\n",
+       "      <td>74069</td>\n",
+       "      <td>34208258784</td>\n",
        "      <td>esl_csgo</td>\n",
-       "      <td>14</td>\n",
-       "      <td>15</td>\n",
+       "      <td>4032</td>\n",
+       "      <td>4037</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>792854</th>\n",
+       "      <td>26334</td>\n",
+       "      <td>34086328048</td>\n",
+       "      <td>riotgames</td>\n",
+       "      <td>2678</td>\n",
+       "      <td>2679</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>109873</th>\n",
-       "      <td>3788</td>\n",
-       "      <td>33917054704</td>\n",
-       "      <td>pashabiceps</td>\n",
-       "      <td>874</td>\n",
-       "      <td>875</td>\n",
+       "      <th>1862635</th>\n",
+       "      <td>61608</td>\n",
+       "      <td>34101914912</td>\n",
+       "      <td>s1mple</td>\n",
+       "      <td>2834</td>\n",
+       "      <td>2838</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1239022</th>\n",
+       "      <td>40865</td>\n",
+       "      <td>34281849408</td>\n",
+       "      <td>tfue</td>\n",
+       "      <td>4764</td>\n",
+       "      <td>4765</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2286128</th>\n",
-       "      <td>75347</td>\n",
-       "      <td>33900262832</td>\n",
-       "      <td>uzra</td>\n",
-       "      <td>708</td>\n",
-       "      <td>709</td>\n",
+       "      <th>959211</th>\n",
+       "      <td>31785</td>\n",
+       "      <td>34114183600</td>\n",
+       "      <td>mascahs</td>\n",
+       "      <td>2987</td>\n",
+       "      <td>2988</td>\n",
        "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1373149</th>\n",
-       "      <td>45389</td>\n",
-       "      <td>34316840320</td>\n",
-       "      <td>melharucos</td>\n",
-       "      <td>5095</td>\n",
-       "      <td>5096</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1809150</th>\n",
-       "      <td>59800</td>\n",
-       "      <td>34339443648</td>\n",
-       "      <td>shroud</td>\n",
-       "      <td>5322</td>\n",
-       "      <td>5324</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -856,49 +856,49 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>518224</th>\n",
-       "      <td>17232</td>\n",
-       "      <td>33880724000</td>\n",
-       "      <td>angelmelly</td>\n",
-       "      <td>534</td>\n",
-       "      <td>535</td>\n",
+       "      <th>101180</th>\n",
+       "      <td>3464</td>\n",
+       "      <td>33841788464</td>\n",
+       "      <td>lincatv</td>\n",
+       "      <td>127</td>\n",
+       "      <td>128</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1414400</th>\n",
-       "      <td>46712</td>\n",
-       "      <td>34029070512</td>\n",
-       "      <td>officialandypyro</td>\n",
-       "      <td>2067</td>\n",
-       "      <td>2068</td>\n",
+       "      <th>1551545</th>\n",
+       "      <td>51188</td>\n",
+       "      <td>33969369776</td>\n",
+       "      <td>froggen</td>\n",
+       "      <td>1445</td>\n",
+       "      <td>1446</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1434995</th>\n",
-       "      <td>47376</td>\n",
-       "      <td>34336345712</td>\n",
-       "      <td>ro55ybo1</td>\n",
-       "      <td>5287</td>\n",
-       "      <td>5290</td>\n",
+       "      <th>913277</th>\n",
+       "      <td>30205</td>\n",
+       "      <td>34384097984</td>\n",
+       "      <td>loserfruit</td>\n",
+       "      <td>5761</td>\n",
+       "      <td>5768</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>808211</th>\n",
+       "      <td>26845</td>\n",
+       "      <td>34366418864</td>\n",
+       "      <td>sypherpk</td>\n",
+       "      <td>5618</td>\n",
+       "      <td>5619</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1679839</th>\n",
+       "      <td>55420</td>\n",
+       "      <td>34350295120</td>\n",
+       "      <td>ninja</td>\n",
+       "      <td>5449</td>\n",
+       "      <td>5452</td>\n",
        "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1781535</th>\n",
-       "      <td>58863</td>\n",
-       "      <td>34280584832</td>\n",
-       "      <td>fortnite</td>\n",
-       "      <td>4730</td>\n",
-       "      <td>4733</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>453195</th>\n",
-       "      <td>15167</td>\n",
-       "      <td>34141236512</td>\n",
-       "      <td>sardoche</td>\n",
-       "      <td>3424</td>\n",
-       "      <td>3425</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -906,31 +906,18 @@
        "</div>"
       ],
       "text/plain": [
-       "         user_id    stream id     streamer name  start time  stop time  \\\n",
-       "29300        991  33827103344          esl_csgo          14         15   \n",
-       "109873      3788  33917054704       pashabiceps         874        875   \n",
-       "2286128    75347  33900262832              uzra         708        709   \n",
-       "1373149    45389  34316840320        melharucos        5095       5096   \n",
-       "1809150    59800  34339443648            shroud        5322       5324   \n",
-       "...          ...          ...               ...         ...        ...   \n",
-       "518224     17232  33880724000        angelmelly         534        535   \n",
-       "1414400    46712  34029070512  officialandypyro        2067       2068   \n",
-       "1434995    47376  34336345712          ro55ybo1        5287       5290   \n",
-       "1781535    58863  34280584832          fortnite        4730       4733   \n",
-       "453195     15167  34141236512          sardoche        3424       3425   \n",
-       "\n",
-       "         time spent  \n",
-       "29300             1  \n",
-       "109873            1  \n",
-       "2286128           1  \n",
-       "1373149           1  \n",
-       "1809150           2  \n",
-       "...             ...  \n",
-       "518224            1  \n",
-       "1414400           1  \n",
-       "1434995           3  \n",
-       "1781535           3  \n",
-       "453195            1  \n",
+       "         user_id    stream id streamer name  start time  stop time  time spent\n",
+       "2246785    74069  34208258784      esl_csgo        4032       4037           5\n",
+       "792854     26334  34086328048     riotgames        2678       2679           1\n",
+       "1862635    61608  34101914912        s1mple        2834       2838           4\n",
+       "1239022    40865  34281849408          tfue        4764       4765           1\n",
+       "959211     31785  34114183600       mascahs        2987       2988           1\n",
+       "...          ...          ...           ...         ...        ...         ...\n",
+       "101180      3464  33841788464       lincatv         127        128           1\n",
+       "1551545    51188  33969369776       froggen        1445       1446           1\n",
+       "913277     30205  34384097984    loserfruit        5761       5768           7\n",
+       "808211     26845  34366418864      sypherpk        5618       5619           1\n",
+       "1679839    55420  34350295120         ninja        5449       5452           3\n",
        "\n",
        "[2136213 rows x 6 columns]"
       ]
@@ -956,6 +943,7 @@
    "source": [
     "streamerPerUser = defaultdict(set)\n",
     "usersPerStreamer = defaultdict(set)\n",
+    "streamerPopularity = defaultdict(int)\n",
     "hoursDict = {}\n",
     "\n",
     "for index, row in train.iterrows():\n",
@@ -965,6 +953,7 @@
     "    time = row['time spent']\n",
     "    streamerPerUser[user].add(streamer)\n",
     "    usersPerStreamer[streamer].add(user)\n",
+    "    streamerPopularity[streamer] += 1\n",
     "    hoursDict[(user,streamer)] = time"
    ]
   },
@@ -977,35 +966,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'jtgtv', 'berkriptepe', 'raufbaba25', 'wtcn', 'towshun', 'kendinemuzisyen', 'alptv', 'eraymaskulen', 'unlostv', 'mithrain', 'zeon', 'jrokezftw', 'elraenn', 'jahrein', 'h3x_tv', 'zeusidiouss', 'ogrencievi', 'grimnax'}\n"
+      "{'unlostv', 'grimnax', 'kendinemuzisyen', 'ogrencievi', 'elraenn', 'wtcn', 'zeon', 'jahrein', 'towshun', 'raufbaba25', 'mithrain', 'jrokezftw', 'zeusidiouss'}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{1,\n",
+       "{92,\n",
        " 600,\n",
+       " 691,\n",
+       " 719,\n",
        " 771,\n",
        " 850,\n",
        " 1126,\n",
        " 1656,\n",
-       " 1995,\n",
        " 2086,\n",
        " 2321,\n",
        " 2504,\n",
+       " 2592,\n",
        " 2606,\n",
        " 2610,\n",
        " 2614,\n",
-       " 2924,\n",
        " 3004,\n",
-       " 3007,\n",
-       " 3210,\n",
        " 3805,\n",
        " 3988,\n",
        " 5701,\n",
        " 5762,\n",
        " 5928,\n",
        " 5934,\n",
+       " 6140,\n",
        " 6857,\n",
        " 6867,\n",
        " 6915,\n",
@@ -1020,9 +1009,7 @@
        " 8400,\n",
        " 8698,\n",
        " 8699,\n",
-       " 8751,\n",
        " 8996,\n",
-       " 8999,\n",
        " 9207,\n",
        " 9423,\n",
        " 9429,\n",
@@ -1031,32 +1018,31 @@
        " 9676,\n",
        " 10010,\n",
        " 10019,\n",
+       " 10157,\n",
        " 10743,\n",
        " 11428,\n",
        " 11666,\n",
        " 12100,\n",
        " 12666,\n",
-       " 12777,\n",
        " 12807,\n",
+       " 12841,\n",
+       " 12910,\n",
        " 12976,\n",
        " 13007,\n",
        " 13014,\n",
        " 13029,\n",
        " 13039,\n",
        " 13096,\n",
-       " 13429,\n",
-       " 14029,\n",
+       " 13582,\n",
        " 14297,\n",
        " 14348,\n",
        " 14475,\n",
        " 14522,\n",
-       " 15756,\n",
        " 16632,\n",
-       " 17090,\n",
+       " 17374,\n",
        " 17575,\n",
        " 18579,\n",
        " 20355,\n",
-       " 20471,\n",
        " 20600,\n",
        " 20662,\n",
        " 20671,\n",
@@ -1069,49 +1055,48 @@
        " 23174,\n",
        " 23514,\n",
        " 23800,\n",
+       " 24585,\n",
        " 25528,\n",
-       " 25537,\n",
+       " 25542,\n",
        " 25544,\n",
-       " 25588,\n",
        " 25648,\n",
        " 25649,\n",
        " 25815,\n",
        " 26075,\n",
-       " 26109,\n",
        " 26119,\n",
        " 26121,\n",
        " 26306,\n",
+       " 26381,\n",
        " 26392,\n",
        " 26486,\n",
        " 26758,\n",
        " 26774,\n",
-       " 26830,\n",
+       " 26784,\n",
        " 26877,\n",
-       " 27677,\n",
-       " 27682,\n",
+       " 27370,\n",
+       " 27631,\n",
+       " 27680,\n",
+       " 28312,\n",
        " 28343,\n",
        " 28546,\n",
        " 29396,\n",
-       " 30129,\n",
        " 30269,\n",
+       " 30304,\n",
        " 30308,\n",
-       " 30981,\n",
+       " 31507,\n",
        " 31775,\n",
        " 31898,\n",
        " 32695,\n",
-       " 32991,\n",
        " 33002,\n",
-       " 33468,\n",
        " 33878,\n",
-       " 34294,\n",
+       " 34078,\n",
        " 34450,\n",
-       " 34459,\n",
+       " 34460,\n",
+       " 34567,\n",
        " 34937,\n",
+       " 34945,\n",
        " 35468,\n",
-       " 35491,\n",
-       " 36157,\n",
        " 36953,\n",
-       " 37348,\n",
        " 38717,\n",
        " 41007,\n",
        " 41393,\n",
@@ -1126,12 +1111,11 @@
        " 47392,\n",
        " 47980,\n",
        " 47994,\n",
-       " 48639,\n",
-       " 48740,\n",
+       " 48045,\n",
+       " 49266,\n",
        " 49458,\n",
        " 49940,\n",
        " 49946,\n",
-       " 50260,\n",
        " 50818,\n",
        " 51782,\n",
        " 51952,\n",
@@ -1142,16 +1126,17 @@
        " 54048,\n",
        " 54640,\n",
        " 54716,\n",
+       " 56270,\n",
        " 56777,\n",
        " 56949,\n",
        " 56955,\n",
+       " 57023,\n",
        " 57128,\n",
        " 57263,\n",
        " 57267,\n",
-       " 57509,\n",
-       " 57515,\n",
        " 57535,\n",
        " 57716,\n",
+       " 58615,\n",
        " 58834,\n",
        " 59616,\n",
        " 59633,\n",
@@ -1159,41 +1144,41 @@
        " 59920,\n",
        " 60089,\n",
        " 60090,\n",
-       " 60133,\n",
        " 60285,\n",
        " 60318,\n",
-       " 60385,\n",
        " 60557,\n",
        " 60605,\n",
        " 60656,\n",
+       " 60659,\n",
        " 60762,\n",
        " 60842,\n",
        " 60845,\n",
-       " 60940,\n",
+       " 61602,\n",
        " 61656,\n",
        " 62088,\n",
-       " 62925,\n",
        " 64372,\n",
+       " 64782,\n",
        " 64876,\n",
        " 64879,\n",
        " 64914,\n",
-       " 64916,\n",
        " 64921,\n",
        " 65070,\n",
        " 65357,\n",
+       " 65579,\n",
        " 65598,\n",
        " 66311,\n",
+       " 66829,\n",
        " 66984,\n",
        " 67022,\n",
        " 68350,\n",
        " 68560,\n",
        " 68734,\n",
-       " 70501,\n",
        " 71143,\n",
        " 72453,\n",
        " 73122,\n",
        " 73149,\n",
        " 73327,\n",
+       " 73418,\n",
        " 74176,\n",
        " 74572,\n",
        " 74959,\n",
@@ -1201,18 +1186,17 @@
        " 75794,\n",
        " 75863,\n",
        " 77219,\n",
-       " 77382,\n",
-       " 77576,\n",
+       " 77377,\n",
        " 80029,\n",
        " 80139,\n",
        " 80170,\n",
-       " 80608,\n",
        " 80612,\n",
        " 84117,\n",
        " 85381,\n",
-       " 85597,\n",
        " 86823,\n",
+       " 88642,\n",
        " 89117,\n",
+       " 89314,\n",
        " 89920,\n",
        " 90582,\n",
        " 90614,\n",
@@ -1220,32 +1204,28 @@
        " 90620,\n",
        " 90676,\n",
        " 90780,\n",
+       " 90781,\n",
        " 90783,\n",
        " 90785,\n",
+       " 90980,\n",
        " 91229,\n",
-       " 91235,\n",
        " 91333,\n",
        " 92537,\n",
-       " 92824,\n",
        " 93772,\n",
        " 93940,\n",
        " 95516,\n",
-       " 95864,\n",
+       " 95604,\n",
        " 96485,\n",
        " 96929,\n",
        " 96942,\n",
        " 96949,\n",
-       " 97191,\n",
-       " 97383,\n",
        " 97385,\n",
-       " 97406,\n",
-       " 97465,\n",
        " 98157,\n",
        " 98209,\n",
        " 98212,\n",
        " 98224,\n",
-       " 98805,\n",
        " 98856,\n",
+       " 99498,\n",
        " 99617}"
       ]
      },
@@ -1257,6 +1237,159 @@
    "source": [
     "print(streamerPerUser[1])\n",
     "usersPerStreamer['berkriptepe']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Jaccard(s1, s2):\n",
+    "    numer = len(s1.intersection(s2))\n",
+    "    denom = len(s1.union(s2))\n",
+    "    if denom == 0:\n",
+    "        return 0\n",
+    "    return numer / denom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "here in:  10000\n",
+      "here in:  20000\n",
+      "here in:  30000\n",
+      "here in:  40000\n",
+      "here in:  50000\n",
+      "here in:  60000\n",
+      "here in:  70000\n",
+      "here in:  80000\n",
+      "here in:  90000\n",
+      "here in:  100000\n",
+      "here in:  110000\n",
+      "here in:  120000\n",
+      "here in:  130000\n",
+      "here in:  140000\n",
+      "here in:  150000\n",
+      "here in:  160000\n",
+      "here in:  170000\n",
+      "here in:  180000\n",
+      "here in:  190000\n",
+      "here in:  200000\n",
+      "here in:  210000\n",
+      "here in:  220000\n",
+      "here in:  230000\n",
+      "here in:  240000\n",
+      "here in:  250000\n",
+      "here in:  260000\n",
+      "here in:  270000\n",
+      "here in:  280000\n",
+      "here in:  290000\n",
+      "here in:  300000\n",
+      "here in:  310000\n",
+      "here in:  320000\n",
+      "here in:  330000\n",
+      "here in:  340000\n",
+      "here in:  350000\n",
+      "here in:  360000\n",
+      "here in:  370000\n",
+      "here in:  380000\n",
+      "here in:  390000\n",
+      "here in:  400000\n",
+      "here in:  410000\n",
+      "here in:  420000\n",
+      "here in:  430000\n",
+      "here in:  440000\n",
+      "here in:  450000\n",
+      "here in:  460000\n",
+      "here in:  470000\n",
+      "here in:  480000\n",
+      "here in:  490000\n",
+      "here in:  500000\n",
+      "here in:  510000\n",
+      "here in:  520000\n",
+      "here in:  530000\n",
+      "here in:  540000\n",
+      "here in:  550000\n",
+      "here in:  560000\n",
+      "here in:  570000\n",
+      "here in:  580000\n",
+      "here in:  590000\n",
+      "here in:  600000\n",
+      "here in:  610000\n",
+      "here in:  620000\n",
+      "here in:  630000\n",
+      "here in:  640000\n",
+      "here in:  650000\n",
+      "here in:  660000\n",
+      "here in:  670000\n",
+      "here in:  680000\n",
+      "here in:  690000\n",
+      "here in:  700000\n",
+      "here in:  710000\n",
+      "here in:  720000\n",
+      "here in:  730000\n",
+      "here in:  740000\n",
+      "here in:  750000\n",
+      "here in:  760000\n",
+      "here in:  770000\n",
+      "here in:  780000\n",
+      "here in:  790000\n",
+      "here in:  800000\n",
+      "here in:  810000\n",
+      "here in:  820000\n",
+      "here in:  830000\n",
+      "here in:  840000\n",
+      "here in:  850000\n",
+      "here in:  860000\n",
+      "here in:  870000\n",
+      "here in:  880000\n",
+      "here in:  890000\n",
+      "here in:  900000\n",
+      "here in:  910000\n",
+      "here\n",
+      "0.6277328731212862\n"
+     ]
+    }
+   ],
+   "source": [
+    "sim = []\n",
+    "threshold = 0.025\n",
+    "count=0\n",
+    "prediction = 0\n",
+    "\n",
+    "for index, row in test.iterrows():\n",
+    "    count +=1\n",
+    "    user = row['user_id']\n",
+    "    streamer = row['streamer name']\n",
+    "    s_ = streamerPerUser[user]\n",
+    "    currMax = float('-inf')\n",
+    "    for streamers in s_:\n",
+    "        currScore = Jaccard(usersPerStreamer[streamers],usersPerStreamer[streamer])\n",
+    "        if(currScore > currMax):\n",
+    "            currMax = currScore\n",
+    "        if(currMax == 1):\n",
+    "            prediction +=1\n",
+    "            break\n",
+    "    if(count % 10000 == 0):\n",
+    "        print('here in: ', count)\n",
+    "    sim.append(currMax)\n",
+    "\n",
+    "print('here')\n",
+    "\n",
+    "# for i in sim:\n",
+    "#     print(i)\n",
+    "#     if i == 1:\n",
+    "#         prediction +=1\n",
+    "        \n",
+    "acc = prediction/len(sim)\n",
+    "print(acc)"
    ]
   },
   {
