--- a/twitchRec.ipynb
+++ b/twitchRec.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Convert CSV to Json"
+    "### Convert CSV to Json"
    ]
   },
   {
@@ -38,27 +38,20 @@
    "outputs": [],
    "source": [
     "# def csv_to_json(csvFilePath, jsonFilePath):\n",
-    "     \n",
     "#     data = {}\n",
-    "     \n",
     "#     with open(csvFilePath, encoding='utf-8') as csvf:\n",
     "#         csvReader = csv.DictReader(csvf)\n",
-    "\n",
     "#         for rows in csvReader:\n",
     "#             key = rows['No']\n",
     "#             data[key] = rows\n",
-    " \n",
-    "    \n",
     "#     with open(jsonFilePath, 'w', encoding='utf-8') as jsonf:\n",
     "#         jsonf.write(json.dumps(data, indent=4))\n",
-    "\n",
-    "\n",
     "# csv_to_json(r'100k_a.csv', r'100k_a.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +136,7 @@
        "4        1  33890145056     jrokezftw         591        594"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,8 +145,6 @@
     "data = []\n",
     "\n",
     "df = pd.read_csv('100k_a.csv', header=None)\n",
-    "\n",
-    "\n",
     "df = df.rename(columns={0: 'user_id', 1: 'stream id', 2: 'streamer name', 3: 'start time', 4: 'stop time'})\n",
     "df.head()\n",
     "# user_id, stream id, streamer name, start time, stop time\n",
@@ -164,22 +155,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# result = df.to_json(orient=\"records\")\n",
-    "# result"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "df['user_id'].nunique()\n",
-    "\n",
     "df['time spent'] = df['stop time'] - df['start time']"
    ]
   },
@@ -192,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -361,7 +348,7 @@
        "[3051733 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +374,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,6 +382,13 @@
    "source": [
     "df.isna().sum() # check for NAs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -405,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +540,7 @@
        "max    1.000000e+05  3.441642e+10  6.147000e+03  6.148000e+03  9.700000e+01"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +718,7 @@
        "[3051733 rows x 6 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,6 +927,17 @@
     "df\n",
     "train, test = train_test_split(df, test_size=0.3)\n",
     "train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert df to list of json\n",
+    "data = df.to_dict(orient='records')\n",
+    "data"
    ]
   },
   {
@@ -1416,7 +1421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
