--- a/twitchRec.ipynb
+++ b/twitchRec.ipynb
@@ -142,23 +142,10 @@
     }
    ],
    "source": [
-    "data = []\n",
-    "\n",
     "df = pd.read_csv('100k_a.csv', header=None)\n",
     "df = df.rename(columns={0: 'user_id', 1: 'stream id', 2: 'streamer name', 3: 'start time', 4: 'stop time'})\n",
-    "df.head()\n",
-    "# user_id, stream id, streamer name, start time, stop time\n",
-    "# with gzip.open('endomondoHR.json.gz') as f:\n",
-    "#     for l in f:\n",
-    "#         data.append(eval(l))"
+    "df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -168,193 +155,6 @@
    "source": [
     "df['user_id'].nunique()\n",
     "df['time spent'] = df['stop time'] - df['start time']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Write here<!-- Although `timestamp_x` and `timestamp_y` are not 'equal', they are actually the same time but represented in different ways. `timestamp_x` is a Unix timestamp (in seconds), while `timestamp_y` is ISO8601 formatted timestamp in UTC. We decided to drop `timestamp_y` as the Unix timestamp is easier to deal with. -->"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>stream id</th>\n",
-       "      <th>streamer name</th>\n",
-       "      <th>start time</th>\n",
-       "      <th>stop time</th>\n",
-       "      <th>time spent</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>33842865744</td>\n",
-       "      <td>mithrain</td>\n",
-       "      <td>154</td>\n",
-       "      <td>156</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>33846768288</td>\n",
-       "      <td>alptv</td>\n",
-       "      <td>166</td>\n",
-       "      <td>169</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>33886469056</td>\n",
-       "      <td>mithrain</td>\n",
-       "      <td>587</td>\n",
-       "      <td>588</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>33887624992</td>\n",
-       "      <td>wtcn</td>\n",
-       "      <td>589</td>\n",
-       "      <td>591</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>33890145056</td>\n",
-       "      <td>jrokezftw</td>\n",
-       "      <td>591</td>\n",
-       "      <td>594</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3051728</th>\n",
-       "      <td>100000</td>\n",
-       "      <td>34167930576</td>\n",
-       "      <td>mckytv</td>\n",
-       "      <td>3582</td>\n",
-       "      <td>3583</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3051729</th>\n",
-       "      <td>100000</td>\n",
-       "      <td>34168288656</td>\n",
-       "      <td>natehill</td>\n",
-       "      <td>3582</td>\n",
-       "      <td>3583</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3051730</th>\n",
-       "      <td>100000</td>\n",
-       "      <td>34169594512</td>\n",
-       "      <td>fortnite</td>\n",
-       "      <td>3582</td>\n",
-       "      <td>3584</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3051731</th>\n",
-       "      <td>100000</td>\n",
-       "      <td>34180223072</td>\n",
-       "      <td>highdistortion</td>\n",
-       "      <td>3709</td>\n",
-       "      <td>3711</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3051732</th>\n",
-       "      <td>100000</td>\n",
-       "      <td>34181187808</td>\n",
-       "      <td>symfuhny</td>\n",
-       "      <td>3706</td>\n",
-       "      <td>3708</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3051733 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         user_id    stream id   streamer name  start time  stop time  \\\n",
-       "0              1  33842865744        mithrain         154        156   \n",
-       "1              1  33846768288           alptv         166        169   \n",
-       "2              1  33886469056        mithrain         587        588   \n",
-       "3              1  33887624992            wtcn         589        591   \n",
-       "4              1  33890145056       jrokezftw         591        594   \n",
-       "...          ...          ...             ...         ...        ...   \n",
-       "3051728   100000  34167930576          mckytv        3582       3583   \n",
-       "3051729   100000  34168288656        natehill        3582       3583   \n",
-       "3051730   100000  34169594512        fortnite        3582       3584   \n",
-       "3051731   100000  34180223072  highdistortion        3709       3711   \n",
-       "3051732   100000  34181187808        symfuhny        3706       3708   \n",
-       "\n",
-       "         time spent  \n",
-       "0                 2  \n",
-       "1                 3  \n",
-       "2                 1  \n",
-       "3                 2  \n",
-       "4                 3  \n",
-       "...             ...  \n",
-       "3051728           1  \n",
-       "3051729           1  \n",
-       "3051730           2  \n",
-       "3051731           2  \n",
-       "3051732           2  \n",
-       "\n",
-       "[3051733 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
    ]
   },
   {
@@ -382,13 +182,6 @@
    "source": [
     "df.isna().sum() # check for NAs"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -729,37 +522,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# cont_features = ['ascent', 'descent', 'calories', 'duration', 'distance', 'avg_heart_rate']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plt.figure(figsize=(10,10))\n",
-    "# for i,feat in enumerate(cont_features):\n",
-    "#     i+=1\n",
-    "#     plt.subplot(2,3,i)\n",
-    "#     sns.histplot(data=merged_df, x=feat, kde=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#sns.countplot(data=merged_df, x='sport', palette='deep')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {
     "scrolled": true
@@ -949,17 +711,16 @@
     "streamerPerUser = defaultdict(set)\n",
     "usersPerStreamer = defaultdict(set)\n",
     "streamerPopularity = defaultdict(int)\n",
-    "hoursDict = {}\n",
+    "timeDict = {}\n",
     "\n",
     "for index, row in train.iterrows():\n",
-    "#     print(row['user_id'], ', ', row['streamer name'])\n",
     "    user = row['user_id']\n",
     "    streamer = row['streamer name']\n",
     "    time = row['time spent']\n",
     "    streamerPerUser[user].add(streamer)\n",
     "    usersPerStreamer[streamer].add(user)\n",
     "    streamerPopularity[streamer] += 1\n",
-    "    hoursDict[(user,streamer)] = time"
+    "    timeDict[(user,streamer)] = time"
    ]
   },
   {
