fixed readme, data splits

--- a/twitchRec.ipynb
+++ b/twitchRec.ipynb
@@ -7078,10 +7078,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 80% train, 10% validation, 10% test\n",
+    "train, temp = train_test_split(data, test_size=0.2, random_state=123)\n",
+    "valid, test = train_test_split(temp, test_size=0.5, random_state=123)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3051733, 3051733)"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data), len(train) + len(valid) + len(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build basic data structures for TRAINING dataset:\n",
+    "streamerPerUserTrain = defaultdict(set)\n",
+    "usersPerStreamerTrain = defaultdict(set)\n",
+    "streamerViewsTrain = defaultdict(int)\n",
+    "interactionCountTrain = defaultdict(int)\n",
+    "timeDictTrain = {}\n",
+    "\n",
+    "for d in train:\n",
+    "    user = d['user_id']\n",
+    "    streamer = d['streamer_name']\n",
+    "    streamerPerUserTrain[user].add(streamer)\n",
+    "    usersPerStreamerTrain[streamer].add(user)\n",
+    "    streamerViewsTrain[streamer] += 1\n",
+    "    interactionCountTrain[(user,streamer)] += 1\n",
+    "    timeDictTrain[(user,streamer)] = d['time_spent']"
+   ]
   },
   {
    "cell_type": "markdown",
