--- a/twitchRec.ipynb
+++ b/twitchRec.ipynb
@@ -207,429 +207,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100000"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['user_id'].nunique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>stream_id</th>\n",
-       "      <th>streamer_name</th>\n",
-       "      <th>start_time</th>\n",
-       "      <th>stop_time</th>\n",
-       "      <th>time_spent</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>369680</th>\n",
-       "      <td>12527</td>\n",
-       "      <td>34388878464</td>\n",
-       "      <td>ninja</td>\n",
-       "      <td>58820</td>\n",
-       "      <td>58840</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>581414</th>\n",
-       "      <td>19245</td>\n",
-       "      <td>33856561952</td>\n",
-       "      <td>ninja</td>\n",
-       "      <td>2790</td>\n",
-       "      <td>2810</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2597754</th>\n",
-       "      <td>85473</td>\n",
-       "      <td>34362898576</td>\n",
-       "      <td>ninja</td>\n",
-       "      <td>55810</td>\n",
-       "      <td>55820</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2960246</th>\n",
-       "      <td>97050</td>\n",
-       "      <td>33997972624</td>\n",
-       "      <td>ninja</td>\n",
-       "      <td>17340</td>\n",
-       "      <td>17360</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1835104</th>\n",
-       "      <td>60682</td>\n",
-       "      <td>34046930480</td>\n",
-       "      <td>ninja</td>\n",
-       "      <td>23000</td>\n",
-       "      <td>23020</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>449395</th>\n",
-       "      <td>15046</td>\n",
-       "      <td>34401244464</td>\n",
-       "      <td>ninja</td>\n",
-       "      <td>60570</td>\n",
-       "      <td>60580</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2648081</th>\n",
-       "      <td>87121</td>\n",
-       "      <td>34074612592</td>\n",
-       "      <td>ninja</td>\n",
-       "      <td>25710</td>\n",
-       "      <td>25720</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1419945</th>\n",
-       "      <td>46901</td>\n",
-       "      <td>33900582288</td>\n",
-       "      <td>ninja</td>\n",
-       "      <td>7100</td>\n",
-       "      <td>7110</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1322905</th>\n",
-       "      <td>43668</td>\n",
-       "      <td>34320007648</td>\n",
-       "      <td>ninja</td>\n",
-       "      <td>51410</td>\n",
-       "      <td>51560</td>\n",
-       "      <td>150</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1262752</th>\n",
-       "      <td>41639</td>\n",
-       "      <td>34140195184</td>\n",
-       "      <td>ninja</td>\n",
-       "      <td>32800</td>\n",
-       "      <td>32810</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>45144 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         user_id    stream_id streamer_name  start_time  stop_time  time_spent\n",
-       "369680     12527  34388878464         ninja       58820      58840          20\n",
-       "581414     19245  33856561952         ninja        2790       2810          20\n",
-       "2597754    85473  34362898576         ninja       55810      55820          10\n",
-       "2960246    97050  33997972624         ninja       17340      17360          20\n",
-       "1835104    60682  34046930480         ninja       23000      23020          20\n",
-       "...          ...          ...           ...         ...        ...         ...\n",
-       "449395     15046  34401244464         ninja       60570      60580          10\n",
-       "2648081    87121  34074612592         ninja       25710      25720          10\n",
-       "1419945    46901  33900582288         ninja        7100       7110          10\n",
-       "1322905    43668  34320007648         ninja       51410      51560         150\n",
-       "1262752    41639  34140195184         ninja       32800      32810          10\n",
-       "\n",
-       "[45144 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 145,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[df['streamer_name'] == 'ninja']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 147,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>stream_id</th>\n",
-       "      <th>streamer_name</th>\n",
-       "      <th>start_time</th>\n",
-       "      <th>stop_time</th>\n",
-       "      <th>time_spent</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1808179</th>\n",
-       "      <td>59782</td>\n",
-       "      <td>33840590320</td>\n",
-       "      <td>trolljac</td>\n",
-       "      <td>1170</td>\n",
-       "      <td>1180</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2799087</th>\n",
-       "      <td>92004</td>\n",
-       "      <td>34336740304</td>\n",
-       "      <td>jay_savage95</td>\n",
-       "      <td>52940</td>\n",
-       "      <td>52950</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2371948</th>\n",
-       "      <td>78196</td>\n",
-       "      <td>34129227424</td>\n",
-       "      <td>roxyproxxy</td>\n",
-       "      <td>31740</td>\n",
-       "      <td>31750</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1980604</th>\n",
-       "      <td>65429</td>\n",
-       "      <td>34058759456</td>\n",
-       "      <td>mckytv</td>\n",
-       "      <td>23980</td>\n",
-       "      <td>23990</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189599</th>\n",
-       "      <td>6481</td>\n",
-       "      <td>34218567872</td>\n",
-       "      <td>kjh203520</td>\n",
-       "      <td>41070</td>\n",
-       "      <td>41120</td>\n",
-       "      <td>50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1692743</th>\n",
-       "      <td>55852</td>\n",
-       "      <td>34264603520</td>\n",
-       "      <td>pathra</td>\n",
-       "      <td>45810</td>\n",
-       "      <td>45820</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2356330</th>\n",
-       "      <td>77691</td>\n",
-       "      <td>33924007184</td>\n",
-       "      <td>nickchipperhs</td>\n",
-       "      <td>9550</td>\n",
-       "      <td>9560</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2229084</th>\n",
-       "      <td>73472</td>\n",
-       "      <td>34314206832</td>\n",
-       "      <td>marinagostadegirassol</td>\n",
-       "      <td>50460</td>\n",
-       "      <td>50470</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2768307</th>\n",
-       "      <td>91051</td>\n",
-       "      <td>34146677840</td>\n",
-       "      <td>tipsyburbles</td>\n",
-       "      <td>33400</td>\n",
-       "      <td>33470</td>\n",
-       "      <td>70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2219110</th>\n",
-       "      <td>73153</td>\n",
-       "      <td>34392735280</td>\n",
-       "      <td>wowhobbs</td>\n",
-       "      <td>58740</td>\n",
-       "      <td>58780</td>\n",
-       "      <td>40</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3051733 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         user_id    stream_id          streamer_name  start_time  stop_time  \\\n",
-       "1808179    59782  33840590320               trolljac        1170       1180   \n",
-       "2799087    92004  34336740304           jay_savage95       52940      52950   \n",
-       "2371948    78196  34129227424             roxyproxxy       31740      31750   \n",
-       "1980604    65429  34058759456                 mckytv       23980      23990   \n",
-       "189599      6481  34218567872              kjh203520       41070      41120   \n",
-       "...          ...          ...                    ...         ...        ...   \n",
-       "1692743    55852  34264603520                 pathra       45810      45820   \n",
-       "2356330    77691  33924007184          nickchipperhs        9550       9560   \n",
-       "2229084    73472  34314206832  marinagostadegirassol       50460      50470   \n",
-       "2768307    91051  34146677840           tipsyburbles       33400      33470   \n",
-       "2219110    73153  34392735280               wowhobbs       58740      58780   \n",
-       "\n",
-       "         time_spent  \n",
-       "1808179          10  \n",
-       "2799087          10  \n",
-       "2371948          10  \n",
-       "1980604          10  \n",
-       "189599           50  \n",
-       "...             ...  \n",
-       "1692743          10  \n",
-       "2356330          10  \n",
-       "2229084          10  \n",
-       "2768307          70  \n",
-       "2219110          40  \n",
-       "\n",
-       "[3051733 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 147,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100000"
-      ]
-     },
-     "execution_count": 148,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['user_id'].nunique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "739991"
-      ]
-     },
-     "execution_count": 146,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['stream_id'].nunique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 149,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "162625"
-      ]
-     },
-     "execution_count": 149,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['streamer_name'].nunique()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 122,
    "metadata": {},
    "outputs": [
@@ -1045,6 +622,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100000, 739991, 162625)"
+      ]
+     },
+     "execution_count": 207,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# probably oculd remove stream_id\n",
+    "df['user_id'].nunique(), df['stream_id'].nunique(), df['streamer_name'].nunique() "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 129,
    "metadata": {
     "scrolled": true
@@ -1222,9 +820,7 @@
    "source": [
     "# shuffle dataframe\n",
     "df = df.sample(frac=1, random_state=42)  \n",
-    "df\n",
-    "# train, test = train_test_split(df, test_size=0.3)\n",
-    "# train"
+    "df"
    ]
   },
   {
@@ -1365,7 +961,6 @@
    ],
    "source": [
     "# Distribution of user_streamer pairs (How often a user watches a stream?)\n",
-    "\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.histplot(list(interactionCount.values()), kde=True)\n",
     "plt.title('Distribution of User-Streamer Pairs')\n",
@@ -1469,7 +1064,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Models"
+    "# Data Preparation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 80% train, 10% validation, 10% test\n",
+    "train, temp = train_test_split(data, test_size=0.03, random_state=123)\n",
+    "valid, test = train_test_split(temp, test_size=0.5, random_state=123)"
    ]
   },
   {
@@ -1490,17 +1096,6 @@
    ],
    "source": [
     "len(data), len(temp), len(valid), len(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 166,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 80% train, 10% validation, 10% test\n",
-    "train, temp = train_test_split(data, test_size=0.03, random_state=123)\n",
-    "valid, test = train_test_split(temp, test_size=0.5, random_state=123)"
    ]
   },
   {
@@ -1618,6 +1213,13 @@
     "#     usersPerStreamer[streamer].add(user)\n",
     "#     streamerPopularity[streamer] += 1\n",
     "#     timeDict[(user,streamer)] = time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Models"
    ]
   },
   {
