--- a/twitchRec.ipynb
+++ b/twitchRec.ipynb
@@ -26,31 +26,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Convert CSV to Json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def csv_to_json(csvFilePath, jsonFilePath):\n",
-    "#     data = {}\n",
-    "#     with open(csvFilePath, encoding='utf-8') as csvf:\n",
-    "#         csvReader = csv.DictReader(csvf)\n",
-    "#         for rows in csvReader:\n",
-    "#             key = rows['No']\n",
-    "#             data[key] = rows\n",
-    "#     with open(jsonFilePath, 'w', encoding='utf-8') as jsonf:\n",
-    "#         jsonf.write(json.dumps(data, indent=4))\n",
-    "# csv_to_json(r'100k_a.csv', r'100k_a.json')"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 120,
    "metadata": {},
@@ -466,6 +441,13 @@
    "metadata": {},
    "source": [
     "## EDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### lowkey we should do EDA using dataframe then after EDA just convert df to data and build models based on data"
    ]
   },
   {
@@ -1073,7 +1055,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 80% train, 10% validation, 10% test\n",
+    "# Split into training, validation, testing\n",
     "train, temp = train_test_split(data, test_size=0.03, random_state=123)\n",
     "valid, test = train_test_split(temp, test_size=0.5, random_state=123)"
    ]
@@ -1156,26 +1138,6 @@
     "    while (u,s) in watchedSet or (u,s) in notWatchedTest:\n",
     "        s = random.choice(list(uniqueStreamers))\n",
     "    notWatchedTest.add((u,s))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "305173"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(valid)"
    ]
   },
   {
